k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: showcase-apps
  labels:
    name: showcase-apps
    environment: production
